--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "prepare": "husky",
     "prettier": "npx prettier --check .",
     "prettier:fix": "npx prettier --write .",
+    "build": "rollup -c --bundleConfigAsCjs --failAfterWarnings",
+    "build:watch": "rollup -c --bundleConfigAsCjs --watch",
     "test": "jest --no-watchman",
     "test:watch": "jest --watch"
   },
@@ -29,12 +31,17 @@
     "@adaptivekind/graph-schema": "^0.1.9",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-typescript": "^7.27.1",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.4",
     "@types/jest": "^30.0.0",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "eslint": "^9.31.0",
     "eslint-plugin-import": "^2.32.0",
     "husky": "^9.1.7",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "rollup": "^4.45.0",
+    "tslib": "^2.8.1"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
