--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "build": "rollup -c --bundleConfigAsCjs --failAfterWarnings",
     "build:watch": "rollup -c --bundleConfigAsCjs --watch",
     "test": "jest --no-watchman",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "knip": "knip"
   },
   "devDependencies": {
     "@adaptivekind/graph-schema": "^0.1.9",
@@ -39,6 +40,7 @@
     "eslint": "^9.31.0",
     "eslint-plugin-import": "^2.32.0",
     "husky": "^9.1.7",
+    "knip": "^5.61.3",
     "prettier": "^3.6.2",
     "rollup": "^4.45.0",
     "tslib": "^2.8.1"
