--- a/package.json
+++ b/package.json
@@ -32,15 +32,22 @@
     "@adaptivekind/graph-schema": "^0.1.9",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-typescript": "^7.27.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.31.0",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.4",
     "@types/jest": "^30.0.0",
+    "@types/mdast": "^4.0.4",
+    "@types/unist": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
+    "@typescript-eslint/parser": "^8.36.0",
     "eslint": "^9.31.0",
     "eslint-plugin-import": "^2.32.0",
+    "globals": "^16.3.0",
     "husky": "^9.1.7",
     "knip": "^5.61.3",
+    "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "rollup": "^4.45.0",
     "tslib": "^2.8.1"
