--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,10 @@ jobs:
         run: npm run knip
 
       - name: Run tests
-        run: npm test
+        run: npm test:coverage
+
+      - name: Generate coverage report
+        run: npm run test:coverage
 
       - name: Build
         run: npm run build
