--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm run knip
 
       - name: Run tests
-        run: npm test:coverage
+        run: npm run test:coverage
 
       - name: Generate coverage report
         run: npm run test:coverage
