--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests
-        run: npm test
+      - name: Lint
+        run: npm run lint
 
+      - name: Knip
+        run: npm run knip
+
+      - name: Run tests
+        run: npm run test:coverage
+
+      - name: Generate coverage report
+        run: npm run test:coverage
+
+      - name: Build
+        run: npm run build
