--- a/package.json
+++ b/package.json
@@ -15,20 +15,52 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "eslint": "eslint src --ext .ts",
+    "eslint:fix": "eslint --fix src --ext .ts",
+    "lint": "npm run prettier && npm run eslint",
+    "lint:fix": "npm run prettier:fix && npm run eslint:fix",
+    "prepare": "husky",
+    "prettier": "npx prettier --check .",
+    "prettier:fix": "npx prettier --write .",
+    "build": "rollup -c --bundleConfigAsCjs --failAfterWarnings",
+    "build:watch": "rollup -c --bundleConfigAsCjs --watch",
     "test": "jest --no-watchman",
     "test:watch": "jest --watch",
-    "prepare": "husky"
+    "test:coverage": "jest --no-watchman --coverage",
+    "knip": "knip"
   },
   "devDependencies": {
     "@adaptivekind/graph-schema": "^0.1.9",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-typescript": "^7.27.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.31.0",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.4",
     "@types/jest": "^30.0.0",
-    "husky": "^9.1.7"
+    "@types/mdast": "^4.0.4",
+    "@types/unist": "^3.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.36.0",
+    "@typescript-eslint/parser": "^8.36.0",
+    "eslint": "^9.31.0",
+    "eslint-plugin-import": "^2.32.0",
+    "globals": "^16.3.0",
+    "husky": "^9.1.7",
+    "knip": "^5.61.3",
+    "lint-staged": "^16.1.2",
+    "prettier": "^3.6.2",
+    "rollup": "^4.45.0",
+    "tslib": "^2.8.1"
   },
   "dependencies": {
+    "es-toolkit": "^1.39.7",
     "gray-matter": "^4.0.3",
     "jest": "^30.0.4",
-    "jest-environment-jsdom": "^30.0.4"
+    "jest-environment-jsdom": "^30.0.4",
+    "mdast-util-to-string": "^4.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-wiki-link": "^2.0.1",
+    "unified": "^11.0.5"
   }
 }
