--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "Ian Homer",
   "type": "module",
   "main": "index.js",
+  "bin": {
+    "markdown-graph": "./dist/cli.js"
+  },
   "scripts": {
     "eslint": "eslint src --ext .ts",
     "eslint:fix": "eslint --fix src --ext .ts",
@@ -54,6 +57,7 @@
     "tslib": "^2.8.1"
   },
   "dependencies": {
+    "consola": "^3.4.2",
     "es-toolkit": "^1.39.7",
     "gray-matter": "^4.0.3",
     "jest": "^30.0.4",
