--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "tslib": "^2.8.1"
   },
   "dependencies": {
+    "commander": "^14.0.0",
     "consola": "^3.4.2",
     "es-toolkit": "^1.39.7",
     "gray-matter": "^4.0.3",
