--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@typescript-eslint/parser": "^8.36.0",
     "eslint": "^9.31.0",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-sonarjs": "^3.0.4",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
     "knip": "^5.61.3",
