--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "eslint": "eslint src --ext .ts",
     "eslint:fix": "eslint --fix src --ext .ts",
-    "lint": "npm run prettier && npm run eslint",
+    "lint": "npm run prettier && npm run eslint && npm run knip",
     "lint:fix": "npm run prettier:fix && npm run eslint:fix",
     "prepare": "husky",
     "prettier": "npx prettier --check .",
