--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --no-watchman --coverage",
     "knip": "knip",
+    "dev": "tsx src/cli.ts",
+    "dev:watch": "tsx src/cli.ts watch",
     "demo:setup": "scripts/setup-demo.sh",
     "demo:generate": "node dist/cli.js generate ./target/demo-docs",
     "demo:watch": "node dist/cli.js watch ./target/demo-docs --verbose",
@@ -63,7 +65,8 @@
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "rollup": "^4.45.0",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "tsx": "^4.19.2"
   },
   "dependencies": {
     "chokidar": "^4.0.3",
