--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   "dependencies": {
     "chokidar": "^4.0.3",
     "commander": "^14.0.0",
+    "compromise": "^14.14.4",
     "consola": "^3.4.2",
     "es-toolkit": "^1.39.7",
     "gray-matter": "^4.0.3",
