--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "author": "Ian Homer",
   "type": "module",
+  "types": "dist/markdown-graph.d.ts",
   "main": "dist/markdown-graph.js",
   "publishConfig": {
     "access": "public"
@@ -65,6 +66,7 @@
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "rollup": "^4.45.0",
+    "rollup-plugin-dts": "^6.2.1",
     "tslib": "^2.8.1",
     "tsx": "^4.19.2"
   },
