--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "resolveJsonModule": true,
     "rootDir": "./src",
     "skipLibCheck": true,
